第三方登录

--- a/core/src/main/resources/hosts.properties
+++ b/core/src/main/resources/hosts.properties
@@ -2,7 +2,7 @@
 [global]
 local=127.0.0.1
 aio_port=8999
-root=http://oscer.com
+root=http://127.0.0.1:88
 static=/home/data/web
 media=http://47.75.15.176:83/
 sendcloud_from=forever7776@163.com
