【优化】帖子详情，回帖周榜

--- a/core/src/main/resources/j2cache.properties
+++ b/core/src/main/resources/j2cache.properties
@@ -11,7 +11,7 @@
 j2cache.broadcast = redis
 
 #组播的通道名称
-jgroups.channel.name = life
+jgroups.channel.name = oscer
 jgroups.configXml =
 
 #########################################
