--- a/platform/src/main/resources/config/j2cache.properties
+++ b/platform/src/main/resources/config/j2cache.properties
@@ -11,7 +11,7 @@
 j2cache.broadcast = redis
 
 #组播的通道名称
-jgroups.channel.name = life
+jgroups.channel.name = oscer
 jgroups.configXml =
 
 #########################################
