【优化】优化系统缓存设置

--- a/core/src/main/resources/caffeine.properties
+++ b/core/src/main/resources/caffeine.properties
@@ -1,4 +1,10 @@
 ## caffeine 缓存配置
-
-default = 1000, 1h
-Tweet = 1000, 10s
+#########################################
+# Caffeine configuration
+# [name] = size, xxxx[s|m|h|d]
+#########################################
+default=1000, 30m
+Tweet=1000, 10s
+one_min=1000, 1m
+five_min=1000, 5m
+one_hour=1000, 1h
