--- a/platform/src/main/resources/oauth_consumer.properties
+++ b/platform/src/main/resources/oauth_consumer.properties
@@ -11,7 +11,7 @@ github = net.oscer.config.provider.GitHubAuthProvider
 github.consumer_key = bf36ee06a6517d7a1ab5
 github.consumer_secret = 3e48900923a5472c49d21468c976803c5836c98d
 github.custom_permissions = user:email
-
+oauth_consumer
 #qq
 qq = net.oscer.config.provider.QQAuthProvider
 qq.consumer_key = 101324508
