【功能】添加记录体温功能

--- a/core/src/main/resources/hosts.properties
+++ b/core/src/main/resources/hosts.properties
@@ -3,10 +3,10 @@
 local=127.0.0.1
 aio_port=8999
 root=http://127.0.0.1:88
-static=/home/data/web
-media=http://47.75.15.176:83/
+static=/home/media/oscer
+media=http://148.70.43.151:83/
 sendcloud_from=forever7776@163.com
 sendcloud_replyto=forever7776@163.com
 [tio]
-ip=47.75.15.176
+ip=148.70.43.151
 port=84
