--- a/core/src/main/resources/database.ini
+++ b/core/src/main/resources/database.ini
@@ -4,9 +4,9 @@ datasource = com.alibaba.druid.pool.DruidDataSource
 show_sql = true
 
 [mysql]
-url = jdbc:mysql://127.0.0.1/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false
+url = jdbc:mysql://117.48.200.114/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true
 username = root
-password = root
+password = root@oscer
 initialSize = 10
 minIdle = 10
 maxActive = 100
