--- a/core/src/main/resources/database.ini
+++ b/core/src/main/resources/database.ini
@@ -4,7 +4,7 @@ datasource = com.alibaba.druid.pool.DruidDataSource
 show_sql = true
 
 [mysql]
-url = jdbc:mysql://117.48.200.114/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true
+url = jdbc:mysql://117.48.200.114/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true&failOverReadOnly=false
 username = root
 password = root@oscer
 initialSize = 10
