--- a/platform/src/main/resources/config/application-dev.yml
+++ b/platform/src/main/resources/config/application-dev.yml
@@ -4,9 +4,9 @@
 #jdbc_config
 spring:
   datasource:
-      url: jdbc:mysql://120.25.216.124:3306/life?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      url: jdbc:mysql://117.48.200.114:3306/lifes77?useUnicode=true&characterEncoding=utf-8&useSSL=false
       username: root
-      password: root
+      password: root@oscer
       driverClassName: com.mysql.jdbc.Driver
       platform: mysql
       type: com.alibaba.druid.pool.DruidDataSource
