--- a/platform/src/main/resources/config/application-dev.yml
+++ b/platform/src/main/resources/config/application-dev.yml
@@ -4,7 +4,7 @@
 #jdbc_config
 spring:
   datasource:
-      url: jdbc:mysql://117.48.200.114:3306/lifes77?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      url: jdbc:mysql://117.48.200.114:3306/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true&failOverReadOnly=false
       username: root
       password: root@oscer
       driverClassName: com.mysql.jdbc.Driver
