--- a/core/src/main/resources/hosts.properties
+++ b/core/src/main/resources/hosts.properties
@@ -2,7 +2,7 @@
 [global]
 local=127.0.0.1
 aio_port=8999
-root=http://holer.cc:50220
+root=https://www.oscer.net
 static=/home/media/oscer
 media=http://148.70.43.151:83/
 sendcloud_from=forever7776@163.com
