【功能】注册功能

--- a/core/src/main/resources/hosts.properties
+++ b/core/src/main/resources/hosts.properties
@@ -4,9 +4,9 @@ local=127.0.0.1
 aio_port=8999
 root=https://www.oscer.net
 static=/home/media/oscer
-media=http://148.70.43.151:83/
+media=http://img.oscer.net/
 sendcloud_from=forever7776@163.com
 sendcloud_replyto=forever7776@163.com
 [tio]
-ip=148.70.43.151
+ip=127.0.0.1
 port=84
