【mysql】修改mysql链接地址

--- a/core/src/main/resources/database.ini
+++ b/core/src/main/resources/database.ini
@@ -4,9 +4,9 @@ datasource = com.alibaba.druid.pool.DruidDataSource
 show_sql = true
 
 [mysql]
-url = jdbc:mysql://117.48.200.114:3306/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true&failOverReadOnly=false
+url = jdbc:mysql://114.67.207.123:3306/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true&failOverReadOnly=false
 username = root
-password = root@oscer
+password = KZ#root#1234
 initialSize = 10
 minIdle = 10
 maxActive = 100
