--- a/platform/src/main/resources/config/application-dev.yml
+++ b/platform/src/main/resources/config/application-dev.yml
@@ -4,10 +4,10 @@
 #jdbc_config
 spring:
   datasource:
-      url: jdbc:mysql://117.48.200.114:3306/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true&failOverReadOnly=false
+      url: jdbc:mysql://114.67.207.123:3306/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true&failOverReadOnly=false
       username: root
-      password: root@oscer
-      driverClassName: com.mysql.jdbc.Driver
+      password: KZ#root#1234
+      driverClassName: com.mysql.cj.jdbc.Driver
       platform: mysql
       type: com.alibaba.druid.pool.DruidDataSource
       # 下面为连接池的补充设置，应用到上面所有数据源中
