--- a/platform/pom.xml
+++ b/platform/pom.xml
@@ -70,6 +70,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.t-io/tio-core -->
+        <dependency>
+            <groupId>org.t-io</groupId>
+            <artifactId>tio-core</artifactId>
+            <version>3.2.1.v20181024-RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
