【优化】去掉sendcloud架包依赖

--- a/core/src/main/resources/database.ini
+++ b/core/src/main/resources/database.ini
@@ -5,7 +5,7 @@ show_sql = true
 
 [mysql]
 url = jdbc:mysql://114.67.207.123:3306/lifes77?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false&autoReconnect=true&failOverReadOnly=false
-username = root
+username = kz
 password = KZ#root#1234
 initialSize = 10
 minIdle = 10
