--- a/core/pom.xml
+++ b/core/pom.xml
@@ -200,25 +200,16 @@
 
 
         <dependency>
-            <groupId>com.forever7776</groupId>
-            <artifactId>sendcloud-remote</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
         </dependency>
 
         <dependency>
-            <groupId>com.forever7776</groupId>
-            <artifactId>sendcloud-core</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.slf4j</groupId>
-                    <artifactId>slf4j-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.3.1</version>
         </dependency>
 
     </dependencies>
