--- a/core/src/main/resources/hosts.properties
+++ b/core/src/main/resources/hosts.properties
@@ -2,11 +2,11 @@
 [global]
 local=127.0.0.1
 aio_port=8999
-root=https://www.oscer.net
+root=http://www.oscer.net
 static=/home/media/oscer
 media=http://img.oscer.net/
 sendcloud_from=forever7776@163.com
 sendcloud_replyto=forever7776@163.com
 [tio]
 ip=127.0.0.1
-port=84
+port=8888
