--- a/core/src/main/resources/j2cache.properties
+++ b/core/src/main/resources/j2cache.properties
@@ -81,10 +81,10 @@ redis.cluster_name = life
 redis.namespace =
 
 ## connection
-redis.hosts = 127.0.0.1:6379
-redis.timeout = 2000
-redis.password =
-redis.database = 0
+redis.hosts = 114.67.207.123:6379
+redis.timeout = 10000
+redis.password = 654321
+redis.database = 1
 
 ## redis pub/sub channel name
 redis.channel = life
